Added body wrapper to index.html and associated styles in styles.css.

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
     </header>
-    <div id="introWrapper" class="flex">
+    <div id="bodyWrapper" class="flex">
       <div id="introContainer">
         <div id="introText">
           <div id="subIntroText">What is Carbon Intensity?</div>
@@ -40,14 +40,14 @@
           </div>
         </div>
       </div>
-    </div>
-    <!-- Data section -->
-    <div class="flex" id="summaryContainer">
-      <div id="timePeriodContainer"><span id="timePeriod"></span></div>
-      <div id="intensityContainer"><span id="intensity"></span></div>
-    </div>
-    <div id="chartContainer" class="flex">
-      <canvas id="chart" width="300" height="150"></canvas>
+      <!-- Data section -->
+      <div class="flex" id="summaryContainer">
+        <div id="timePeriodContainer"><span id="timePeriod"></span></div>
+        <div id="intensityContainer"><span id="intensity"></span></div>
+      </div>
+      <div id="chartContainer" class="flex">
+        <canvas id="chart" width="300" height="150"></canvas>
+      </div>
     </div>
     <!-- Footer -->
     <footer>
