--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Finance Dashboard Application</title>
+    <title>National Carbon Intensity</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,9 +27,6 @@
       <div id="introContainer">
         <div id="introText">
           <div id="subIntroText">What is Carbon Intensity?</div>
-          <!-- <div id="underline">
-            <img src="./images/dual_underline.svg" height="15">
-          </div> -->
           <p>The <strong>carbon intensity</strong> of electricity if a measure of how much CO<sub>2</sub> emissions are produced per kilowatt hour of electricity consumed. <br><br>
 
           NESO's Carbon Intensity API provides an indicative trend of regional carbon intensity of the electricity system in Great Britain up to 2 days ahead of real-time.</p>
@@ -42,6 +39,9 @@
       </div>
       <!-- Data section -->
       <div id="dataContainer">
+        <div id="chartTitle" class="flex">
+          <p>Live Carbon Intensity Data</p>
+        </div>
         <div class="flex" id="summaryContainer">
           <div id="forecastTime"></div>
           <div id="latestIntensity"></div>
