Changed hero layout, images and styles. Added more information on what data and insights are provided by the web page.

--- a/src/index.html
+++ b/src/index.html
@@ -24,19 +24,42 @@
       </div>
     </header>
     <div id="bodyWrapper" class="flex">
+
       <div id="introContainer">
         <div id="introText">
           <div id="subIntroText">What is Carbon Intensity?</div>
-          <p>The <strong>carbon intensity</strong> of electricity if a measure of how much CO<sub>2</sub> emissions are produced per kilowatt hour of electricity consumed. <br><br>
-
-          NESO's Carbon Intensity API provides an indicative trend of regional carbon intensity of the electricity system in Great Britain up to 2 days ahead of real-time.</p>
+          <p>The <strong>carbon intensity</strong> of electricity if a measure of how much CO<sub>2</sub> emissions are produced per kilowatt hour of electricity consumed.</p>
         </div>
         <div id="introImageContainer" class="flex">
-          <div id="introImage" class="flex">
-            <img src="./images/hero-main.svg">
+          <div id="introImage">
+            <img src="./images/hero-image.svg" alt="a man filling his car with petrol">
+          </div>
+        </div>
+        <div id="insightsContainer" class="flex">
+          <div id="firstInsight" class="indivInsight">
+            <img src="./images/book.svg" alt="a lady sitting down and reading a book" class="insightImage">
+            <div id="firstInsightCaption" class="insightCaption">
+              <h3>Live data and analysis</h3>
+              <p>Access to real-time insights including: latest measured carbon intensity (CI), forecasted daily maximum and minimum CI, and a comparison of the measured and forecasted daily CI values.</p>
+            </div>
+          </div>
+          <div id="secondInsight" class="indivInsight">
+            <img src="./images/escooter.svg" alt="a man riding an escooter" class="insightImage">
+            <div id="secondInsightCaption" class="insightCaption">
+              <h3>Generation Mix</h3>
+              <p>A break-down of the proportion of carbon intensity originating from a variety of fuel types including: gas, coal, nuclear, biomass, hydro, imports, solar, wind, and other. </p>
+            </div>
+          </div>
+          <div id="thirdInsight" class="indivInsight">
+            <img src="./images/work.svg" alt="a lady working from home" class="insightImage">
+            <div id="thirdInsightCaption" class="insightCaption">
+              <h3>48-hour forecast</h3>
+              <p>NESO's Carbon Intensity API provides an indicative trend of regional carbon intensity of the electricity system in Great Britain up to 2 days ahead of real-time.</p>
+            </div>
           </div>
         </div>
       </div>
+
       <!-- Data section -->
       <div id="dataContainer">
         <div id="chartTitle" class="flex">
@@ -57,7 +80,7 @@
     <footer>
       <div id="creditsWrapper" class="flex">
         <div id="creditsBanner" class="flex">
-          <h2>Attributions</h2>
+          <h2>Credits</h2>
           <div id="pattern">
             <img src="./images/pattern.svg">
           </div>
@@ -65,7 +88,10 @@
       </div>
       <div id="credits" class="flex">
         <div>
-          <p>Illustrations by <a href="https://www.behance.net/IlliyinStudio">@illiyinstudio</a></p>
+          <p>Free illustrations from <a href="https://streamlinehq.com">Streamline</a>, licensed under <a href=“https://creativecommons.org/licenses/by/4.0/”>CC BY 4.0</a></p>
+        </div>
+        <div>
+          <p>Free illustrations from <a href="https://www.behance.net/IlliyinStudio">@illiyinstudio</a>, licensed under <a href=“https://creativecommons.org/licenses/by/4.0/”>CC BY 4.0</a></p>
         </div>
         <div>
           <p>SVG Underline doodles by <a href="https://www.svgbackgrounds.com/elements/underline-doodles/">SVGBackgrounds.com</a></p>
